# aiva

./:  .gitlab-ci.yml  .example.env  Dockerfile  README.md  main.py  pyproject.toml
.gitlab/: auto-deploy-values.yaml
src/: main.py
src/application/llm/: __init__.py  fake.py  gigachat.py
src/application/services/code_suggest/: base.py  code_suggest_service.py  fabrics.py
src/application/services/comment_code_suggest/: __init__.py  base.py  code_suggest_service.py  fabrics.py
src/application/services/graphs/: __init__.py  graphs.py
src/application/services/graphs/prompts/: gigachat_prompts.py
src/application/services/graphs/prompts/templates/: comment_code_suggest_prompts.toml  mr_summary_prompt.toml
src/application/vcs_providers/: __init__.py  base.py  bitbucket_provider.py  fabrics.py  gitlab_provider.py
src/application/vcs_providers/bitbucket/: bitbucket_provider.py
src/application/vcs_providers/gitlab/: gitlab_provider.py
src/log/: config.py
src/presentation/api_v1/: __init__.py
src/presentation/api_v1/providers/: __init__.py
src/presentation/api_v1/providers/gitlab/: __init__.py  dependencies.py  router.py  schemas.py
src/presentation/api_v1/providers/gitlab/schemas/: __init__.py  base.py  comment.py  mr.py
src/prompts/: __init__.py  gigachat_prompts.py
src/prompts/templates/: comment_code_suggest_prompt.toml
src/settings/: common.py  settings.py
tests/gitlab_hooks/: hooks.http
