[project]
name = "aiva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "granian[reload]>=1.7.5",
    "langchain-gigachat>=0.3.3",
    "orjson>=3.10.15",
    "pydantic-settings>=2.7.1",
    "structlog>=25.1.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
